--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "react-slick": "^0.28.1"
+    "axios": "^0.25.0",
+    "react-slick": "^0.28.1",
+    "redux-saga": "^1.1.3"
   }
 }
