--- a/.gitignore
+++ b/.gitignore
@@ -114,6 +114,8 @@ typings/
 
 # dotenv environment variables file
 .env
+/prepare/back/.env
+/prepare/front/.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
